src/css/main.scss
html {
    font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        'Segoe UI',
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        'Open Sans',
        'Helvetica Neue',
        sans-serif;
    color: #cdcdcd;
    background-color: #2a2a2e;
    font-weight: 300;

    p {
        font-size: 24px;
    }

    body {
        margin: 0;
    }

    a {
        text-decoration: none;
        color: #4baeee;
    }

    a:hover {
        text-decoration: none;
        color: #1c87cc;
    }

    h1 {
        font-size: 2.5rem;
        color: #fff;
        font-family: "menlo", "consolas", monospace;
    }

    h2 {
        font-size: 2.5rem;
        color: #dedede;
        clear: both;
    }

    .left-align {
        float: left;
    }

    .right-align {
        float: right;
    }

    .hoverable {
        filter: drop-shadow(5px 5px 10px #000000aa);

        transition: all 0.5s ease;

        &:hover {
            transform: scale(1.1);
        }
    }

    .right-align,
    .left-align {
        @media screen and (max-width: 1450px) {
            float: none;
            display: block;
            margin-left: auto;
            margin-right: auto;
        }
    }

    .padding_div {
        padding-left: 15vw;
        padding-right: 15vw;
    }

    .banner_img {
        background-position: center;
        background-repeat: no-repeat;
        width: 100%;
        -webkit-mask-image: -webkit-gradient(linear, left top, left bottom,
                from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
        mask-image: gradient(linear, left top, left bottom,
                from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
    }
}

